MODORDERS-1190. Fix sonar