@@ -3,7 +3,6 @@ package org.folio.orders.utils;
 import org.folio.rest.acq.model.invoice.InvoiceLine;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class InvoiceUtil {
   private InvoiceUtil() {}
@@ -12,6 +11,6 @@ public class InvoiceUtil {
                                                                List<InvoiceLine.InvoiceLineStatus> invoiceLineStatuses) {
     return invoiceLines.stream()
       .filter(invoiceLine -> invoiceLineStatuses.contains(invoiceLine.getInvoiceLineStatus()))
-      .collect(Collectors.toList());
+      .toList();
   }
 }
